--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,6 @@
   .second-row {
     display: flex;
     height: 50vh;
-    width: 100vw;
   }
 
   .first-element,
@@ -71,7 +70,7 @@
 
 .learn-more {
   display: flex;
-  width: 100vw;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   margin-bottom: 80px;
@@ -138,7 +137,7 @@ body {
   align-items: center;
   justify-content: center;
   display: inline-flex;
-  width: 100vw;
+  width: 100%;
 
   .field {
     width: 300px;
